# python-hotkeys

./: .gitignore  LICENSE  README.md  async_demo.py  pyproject.toml  sync_demo.py
src/python_hotkeys/: __init__.py
